# ikrigretarget

./: .gitignore  CMakeLists.txt  README.md  setup.py
code/: IKRigUtils.cpp  IKRigUtils.hpp  SoulFTransform.h  SoulIKRetargetProcessor.h  SoulScene.cpp  SoulScene.hpp
lib/: IKRigUtils.cpp  IKRigUtils.hpp  SoulFTransform.cpp  SoulFTransform.h  SoulIKRetargetProcessor.cpp  SoulIKRetargetProcessor.h  SoulIKRigTetarget.cpp  SoulRetargeter.h  SoulScene.cpp  SoulScene.hpp  SoulTransform.cpp  SoulTransform.h
model/: 3D_Avatar2_Rig_0723_itpose.fbx  3D_Avatar2_Rig_0723_out.fbx  3D_Avatar2_Rig_0723_tpose1_ani.fbx  3D_Avatar2_Rig_0723_tpose1_mesh.fbx  45_Degree_Left_Turn_From_Idle.fbx  ExportScene05.fbx  ExportScene05_out.fbx  Flair.fbx  GPT_T-Pose.fbx  GPT_T-Pose_big.fbx  Robot Hip Hop Dance.fbx  S1_SittingDown_3d_17kpts.fbx  S1_SittingDown_3d_17kpts_tiny.fbx  S1_SittingDown_3d_17kpts_tiny_ball.fbx  S1_SittingDown_3d_17kpts_tiny_ball2.fbx  S1_SittingDown_3d_17kpts_tiny_ball_cm.fbx  S1_SittingDown_3d_17kpts_tiny_ball_out.fbx  S1_SittingDown_3d_17kpts_tiny_noani.fbx  S1_SittingDown_3d_17kpts_tiny_out.fbx  S1_Walking_3d_17kpts.fbx  Y_Bot.fbx  gpt_motion_smpl.fbx  gpt_motion_smpl_big.fbx  srcAnimation.fbx
python/: CMakeLists.txt  test.py
python/src/: ikrigretargetbind.cpp
test/: CMakeLists.txt  main.cpp
test/src/: FBXRW.cpp  FBXRW.h  IKRigUtils.cpp  IKRigUtils.hpp  InitPoseConvert.cpp  InitPoseConvert.h  ObjRW.cpp  ObjRW.h  SoulScene.cpp  SoulScene.hpp  ikrigretargetapi.cpp  ikrigretargetapi.hpp  main.cpp
